--- a/2_config/botconfig.json
+++ b/2_config/botconfig.json
@@ -1,5 +1,5 @@
 {
-    "token": "NjkwMzMyNzA4MjE5Mzg3OTA0.XnP8nw.Sh3rCidDJ2So60bVNbTcLoaMxLw",
+    "token": "NjkwMzMyNzA4MjE5Mzg3OTA0.XnT1tg.0P3svnfaruG3YZf9F8RvhWkWpj4",
     "prefix": "wg",
     "color": "0xbb2bbd",
     "pending_color": "0xdf6500"
