--- a/2_config/botconfig.json
+++ b/2_config/botconfig.json
@@ -1,5 +1,5 @@
 {
-    "token": "just imagine a token",
+    "token": "NjkwMzMyNzA4MjE5Mzg3OTA0.XpmnXw.5taKPNraoteFo3uxeuLXZmOeZtw",
     "url": "just imagine an url",
     "prefix": "!",
     "color": "0x71368a",
