--- a/2_config/botconfig.json
+++ b/2_config/botconfig.json
@@ -1,5 +1,5 @@
 {
-    "token": "",
+    "token": "NjkwMzMyNzA4MjE5Mzg3OTA0.XpmsAg.kHWVs3Dv2oR2NrLzj4bVmVsoNUA",
     "url": "just imagine an url",
     "prefix": "!",
     "color": "0x71368a",
